refactor bot config and add enableConsoleReader option