@@ -6,6 +6,7 @@ import lombok.extern.java.Log;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
@@ -16,6 +17,9 @@ import java.util.Optional;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
+/**
+ * Clase para gestionar los módulos de Zincite
+ */
 @Log
 @RequiredArgsConstructor
 public class ModuleManager {
@@ -31,8 +35,17 @@ public class ModuleManager {
     public void registerModule(ZinciteModule module) {
         modules.add(module);
     }
-    
-    public void loadModules() throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException {
+
+    /**
+     * Cargar los módulos desde la carpeta de módulos
+     * @throws IOException Si ocurre un error al cargar los módulos
+     * @throws ClassNotFoundException Si no se encuentra la clase del módulo
+     * @throws IllegalAccessException Si no se puede acceder a la clase del módulo
+     * @throws InstantiationException Si no se puede instanciar la clase del módulo
+     * @throws NoSuchMethodException Si no se encuentra el constructor de la clase del módulo
+     * @throws InvocationTargetException Si ocurre un error al invocar el constructor de la clase del módulo
+     */
+    public void loadModules() throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         log.info("Cargando módulos...");
         if (Files.notExists(modulesFolder.toPath())) {
             Files.createDirectories(modulesFolder.toPath());
@@ -49,20 +62,20 @@ public class ModuleManager {
             urls[i] = files[i].toURI().toURL();
         }
 
-        final URLClassLoader classLoader = new URLClassLoader(urls);
-
-        for (final File file : files) {
-            final JarFile jarFile = new JarFile(file);
-            final Enumeration<JarEntry> entries = jarFile.entries();
-
-            while (entries.hasMoreElements()) {
-                final JarEntry jarEntry = entries.nextElement();
-                if (jarEntry.getName().endsWith(".class")) {
-                    //server.debugLog(jarEntry.getName().replace("/", ".").substring(0, jarEntry.getName().length() - 6));
-                    Class<?> targetClass = classLoader.loadClass(jarEntry.getName().replace("/", ".").substring(0, jarEntry.getName().length() - 6));
-                    if (ZinciteModule.class.isAssignableFrom(targetClass)) {
-                        final ZinciteModule module = (ZinciteModule) targetClass.newInstance();
-                        modules.add(module);
+        try (URLClassLoader classLoader = new URLClassLoader(urls)) {
+            for (File file : files) {
+                try (JarFile jarFile = new JarFile(file)) {
+                    Enumeration<JarEntry> entries = jarFile.entries();
+                    while (entries.hasMoreElements()) {
+                        JarEntry jarEntry = entries.nextElement();
+                        if (jarEntry.getName().endsWith(".class")) {
+                            String className = jarEntry.getName().replace("/", ".").replace(".class", "");
+                            Class<?> targetClass = classLoader.loadClass(className);
+                            if (ZinciteModule.class.isAssignableFrom(targetClass)) {
+                                ZinciteModule module = (ZinciteModule) targetClass.getDeclaredConstructor().newInstance();
+                                modules.add(module);
+                            }
+                        }
                     }
                 }
             }
